# CS247_2022

./: .gitignore
assignment_0/: CMakeLists.txt
assignment_0/src/: CS247_prog.cpp  CS247_prog.h
